profile gap fixed

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -233,7 +233,7 @@ $bg-color: rgb(80, 168, 231);
     .container{
 
         flex-direction: column;
-        gap: 5%;
+        gap: 3%;
 
 
         .content{
